--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="open_nav">Open Navigation Drawer</string>
     <string name="close_nav">Close Navigation Drawer</string>
+    <string name="text_about_us">"Здраствуйте,мы команда Trackg!
+        Это приложение создано для помощи отслеживания геолокации общественного транспорта.
+        Надеюсь наша команда сможет вам помочь в вашем маршруте. С уважением команда проекта Trackg!"</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
